@@ -2,10 +2,9 @@ package org.cryptomator.cloudaccess.api;
 
 import java.nio.file.Path;
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
 
 import org.hamcrest.CoreMatchers;
 import org.hamcrest.MatcherAssert;
@@ -24,20 +23,20 @@ public class CloudProviderTest {
 		CloudItemMetadata item4 = Mockito.mock(CloudItemMetadata.class, "item4");
 		CloudItemMetadata item5 = Mockito.mock(CloudItemMetadata.class, "item5");
 		CloudItemMetadata item6 = Mockito.mock(CloudItemMetadata.class, "item6");
-		CloudItemList part1 = new CloudItemList(Arrays.asList(item1, item2, item3), Optional.of("token1"));
-		CloudItemList part2 = new CloudItemList(Arrays.asList(item4, item5), Optional.of("token2"));
-		CloudItemList part3 = new CloudItemList(Arrays.asList(item6), Optional.empty());
+		CloudItemList part1 = new CloudItemList(List.of(item1, item2, item3), Optional.of("token1"));
+		CloudItemList part2 = new CloudItemList(List.of(item4, item5), Optional.of("token2"));
+		CloudItemList part3 = new CloudItemList(List.of(item6), Optional.empty());
 		CloudProvider provider = Mockito.mock(CloudProvider.class);
 		Mockito.when(provider.listExhaustively(p)).thenCallRealMethod();
-		Mockito.when(provider.list(p, Optional.empty())).thenReturn(CompletableFuture.completedFuture(part1));
-		Mockito.when(provider.list(p, part1.getNextPageToken())).thenReturn(CompletableFuture.completedFuture(part2));
-		Mockito.when(provider.list(p, part2.getNextPageToken())).thenReturn(CompletableFuture.completedFuture(part3));
-		
-		CompletionStage<CloudItemList> result = provider.listExhaustively(p);
-		
+		Mockito.when(provider.list(p, Optional.empty())).thenReturn(CompletableFuture.completedStage(part1));
+		Mockito.when(provider.list(p, part1.getNextPageToken())).thenReturn(CompletableFuture.completedStage(part2));
+		Mockito.when(provider.list(p, part2.getNextPageToken())).thenReturn(CompletableFuture.completedStage(part3));
+
+		var result = provider.listExhaustively(p);
+		var itemList = Assertions.assertTimeoutPreemptively(Duration.ofSeconds(1), () ->  result.toCompletableFuture().get());
+
 		Assertions.assertNotNull(result);
-		CloudItemList itemList = Assertions.assertTimeoutPreemptively(Duration.ofSeconds(1), () ->  result.toCompletableFuture().get());
-		Assertions.assertFalse(itemList.getNextPageToken().isPresent());
+		Assertions.assertTrue(itemList.getNextPageToken().isEmpty());
 		MatcherAssert.assertThat(itemList.getItems(), CoreMatchers.hasItems(item1, item2, item3, item4, item5, item6));
 	}
 	
